styles.css
/* font-family: 'Open Sans Condensed', sans-serif;
font-family: 'Comfortaa', cursive; */

* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
}

body {
   color: #dedede;
   background-color: #dedede;

   font-family: 'Open Sans Condensed', sans-serif;
}

/*-----------------------------*/

/* HEADER SECTION */

/*-----------------------------*/

h1, h2 {
   color: #ff1353;

   font-family: 'Comfortaa', cursive;
}

h1 {
   font-size: 3em;
}

.hero {
   display: flex;
   align-items: center;
   justify-content: center;

   width: 100%;
   height: 150px;

   background-color: #002930;
}


/*-----------------------------*/

/* CARDS SECTION */

/*-----------------------------*/

.container {
   display: grid;

   width: 960px;
   margin: 5em auto;

   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   grid-column-gap: 1.5em;
}

.image-container img {
   width: 100%;
   height: auto;
}

.card-items {
   padding: 1.5em;

   background-color: #002930;
}

h2 {
   padding: 0.8em 0;
   font-size: 2em;
}

